[Task CS-55] Fix authorization (#12)
* provided CROS functionality to user.py

* added cookie security in swagger, fixed cookie handling in user.py

* fixed tests, chenged allow-origin to '*'

* minor description changes

* added functioning JWT authorization via pyJWT

* added lacking JWT handling in api.yaml, made code more readable

* filled missing api.yaml, changed auth from email to role, added common function, added secret key config

* added before_request to handle OPTION method

* fixed tests, pylint user.py fix

* docs change

* added password hashing in db, put token handling in rest/common

* Add healthcheck to docker-compose
